--- a/html/Paciente/0Paciente.html
+++ b/html/Paciente/0Paciente.html
@@ -15,6 +15,7 @@
     <title>Paciente</title>
 </head>
 <body>
+    <p>hola xdf</p>
     <header>
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid">
