avance AvancePersonal sirve

--- a/html/Paciente/AvancePersonal.html
+++ b/html/Paciente/AvancePersonal.html
@@ -55,7 +55,7 @@
                     <div class="card-body">
                         <label for="avance" class="form-label">Actualizar avance:</label>
                         <textarea class="form-control mb-3" id="avance" rows="3" placeholder="Ingrese su avance personal"></textarea>
-                        <button type="button" class="btn btn-primary">Subir avance</button>
+                        <button type="button" class="btn btn-primary" onclick="registrarAvancePersonal()">Subir avance</button>
                     </div>
                 </div>
             </div>
