--- a/html/Administrador/DashBoard.html
+++ b/html/Administrador/DashBoard.html
@@ -47,7 +47,7 @@
                             Gráfica 1
                         </div>
                         <div class="card-body">
-                            <canvas id="grafica3" width="400" height="200"></canvas>
+                            <canvas id="grafica_tipo_documento" width="400" height="200"></canvas>
                         </div>
                     </div>
                 </div>
