--- a/html/Paciente/0Paciente.html
+++ b/html/Paciente/0Paciente.html
@@ -51,7 +51,7 @@
                 <div class="card h-100">
                     <img src="../../assets/soli.png" class="card-img-top" alt="..." style="height: 200px;">
                     <div class="card-body">
-                        <h5 class="card-title">Solicitar cita</h5>
+                        <h5 class="card-title">Agendar cita</h5>
                         <p class="card-text">Puede elegir su cita a partir de la disponibilidad de horario.</p>
                     </div>
                     <div class="card-footer">
@@ -61,13 +61,13 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="../../assets/lista.png" class="card-img-top" alt="solicitar cita" style="height: 200px;">
+                    <img src="../../assets/ia.jpeg" class="card-img-top" alt="solicitar cita" style="height: 200px;">
                     <div class="card-body">
-                        <h5 class="card-title">Buenas tardes</h5>
-                        <p class="card-text">Buenas noches, buenos dias.</p>
+                        <h5 class="card-title">Formulario de IA</h5>
+                        <p class="card-text">Aquí puede encontrar un formulario de predicción basado en machine learning que le mandará a su psicólogo un predignóstico para una mejor asesoría a partir de sus respuestas.</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary w-100">Ver partidos de futbol</a>
+                        <a href="FormularioIA.html" class="btn btn-primary w-100">Ir al formulario</a>
                     </div>
                 </div>
             </div>
@@ -91,19 +91,7 @@
                         <p class="card-text">Aquí puede encontrar sus tareas y compromisos pendientes a partir de las citas con los psicólogos.</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary w-100">Ir a tareas y compromisos</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="../../assets/ia.jpeg" class="card-img-top" alt="..." style="height: 200px;">
-                    <div class="card-body">
-                        <h5 class="card-title">Formulario de IA</h5>
-                        <p class="card-text">Aquí puede encontrar un formulario de predicción basado en machine learning que le mandará a su psicólogo un predignóstico para una mejor asesoría a partir de sus respuestas.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="FormularioIA.html" class="btn btn-primary w-100">Ir al formulario</a>
+                        <a href="Tarea.html" class="btn btn-primary w-100">Ir a tareas y compromisos</a>
                     </div>
                 </div>
             </div>
