--- a/html/ConsejosEventos.html
+++ b/html/ConsejosEventos.html
@@ -55,7 +55,7 @@
     <main class="mt-5">
         <div class="container mt-3">
             <h2 class="text-center">Publicaciones</h2>
-            <div class="evento-section">
+            <div class="evento-section  mt-3">
                 <div class="banner-image">
                     <img src="../assets/eventos.jpg" height="350px" width="2000px" alt="Imagen de evento">
                 </div>
