--- a/html/Psicologo/historialClinico.html
+++ b/html/Psicologo/historialClinico.html
@@ -58,6 +58,6 @@
     <script src="../../js/Administrador/DataTable/jquery-3.5.1.js"></script>
     <script src="../../js/Administrador/DataTable/jquery.dataTables.min.js"></script>
     <script src="../../js/Administrador/DataTable/dataTables.bootstrap5.min.js"></script>
-    <script src="../../js/Paciente/tabla.js"></script>
+    <script src="../../js/Psicologo/tabla.js"></script>
 </body>
 </html>
