--- a/html/Psicologo/historialClinico.html
+++ b/html/Psicologo/historialClinico.html
@@ -53,11 +53,12 @@
                     </table>
                 </div>
             </div>
-        </div>    </main>
+        </div>    
+    </main>
     <script src="../../js/bootstrap.bundle.min.js"></script>
     <script src="../../js/Administrador/DataTable/jquery-3.5.1.js"></script>
     <script src="../../js/Administrador/DataTable/jquery.dataTables.min.js"></script>
     <script src="../../js/Administrador/DataTable/dataTables.bootstrap5.min.js"></script>
-    <script src="../../js/Psicologo/tabla.js"></script>
+    <script src="../../js/Psicologo/tablapaciente.js"></script>
 </body>
 </html>
