--- a/html/Paciente/Tarea.html
+++ b/html/Paciente/Tarea.html
@@ -36,7 +36,7 @@
         <h2>Tareas pendientes</h2>
         <ul id="tareaspendientes"></ul>
     </main>
-
+    <script src="../../js/Paciente/tareapaciente.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
