--- a/html/Administrador/0Administrador.html
+++ b/html/Administrador/0Administrador.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -46,34 +45,32 @@
         </nav>
     </header>
     <main class="container mt-5">
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
-            <div class="col">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 justify-content-center">
+            <div class="col mb-4">
                 <div class="card h-100">
                     <img src="../../assets/register.png" class="card-img-top" alt="..." style="height: 200px;">
                     <div class="card-body">
                         <h5 class="card-title">Registrar psicólogos</h5>
-                        <p class="card-text">Registrar los psicólogos de la institución para que tengan acceso al
-                            aplicativo.</p>
+                        <p class="card-text">Registrar los psicólogos de la institución para que tengan acceso al aplicativo.</p>
                     </div>
                     <div class="card-footer">
                         <a href="RegistrarPsico.html" class="btn btn-primary w-100">Registrar psicólogos</a>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col mb-4">
                 <div class="card h-100">
                     <img src="../../assets/mos.png" class="card-img-top" alt="solicitar cita" style="height: 200px;">
                     <div class="card-body">
                         <h5 class="card-title">Mostrar Usuarios</h5>
-                        <p class="card-text">Aquí puede encontrar todos los usuarios que estan registrados dentro del
-                            aplicativo.</p>
+                        <p class="card-text">Aquí puede encontrar todos los usuarios que están registrados dentro del aplicativo.</p>
                     </div>
                     <div class="card-footer">
                         <a href="Datatable.html" class="btn btn-primary w-100">Mostrar Usuarios</a>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col mb-4">
                 <div class="card h-100">
                     <img src="../../assets/dasb.jpg" class="card-img-top" alt="..." style="height: 200px;">
                     <div class="card-body">
@@ -86,12 +83,11 @@
                 </div>
             </div>
         </div>
-        <div class="modal fade" id="perfilAdminModal" tabindex="-1" role="dialog" aria-labelledby="perfilModalLabel"
-            aria-hidden="true">
+        <div class="modal fade" id="perfilAdminModal" tabindex="-1" role="dialog" aria-labelledby="perfilModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="perfilModalLabel"> Perfil de Administrador</h5>
+                        <h5 class="modal-title" id="perfilModalLabel">Perfil de Administrador</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -111,5 +107,4 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-
 </html>
