--- a/html/Paciente/Tarea.html
+++ b/html/Paciente/Tarea.html
@@ -15,7 +15,7 @@
                     <img src="../../assets/logo-itsa.png" alt="Logo de la IUB" height="50">
                 </a>
             </div>
-            <div class="col-md-6 text-right"> <!-- Cambiado el div a la derecha -->
+            <div class="col-md-6 text-right"> 
                 <nav class="navbar navbar-expand-md navbar-light justify-content-end">
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
@@ -29,7 +29,7 @@
         </div>
     </header>
 
-    <main class="mt-5"> <!-- Añadido margen superior para separar del header -->
+    <main class="mt-5"> 
         <h1>Lista de Tareas</h1>
         <h2>Tareas completadas</h2>
         <ul id="tareascompletadas"></ul>
@@ -47,6 +47,5 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="script.js"></script>
 </body>
 </html>
