--- a/html/Paciente/Tarea.html
+++ b/html/Paciente/Tarea.html
@@ -6,9 +6,10 @@
     <title>Lista de Tareas</title>
     <link rel="stylesheet" href="../../css/tarea.css">
     <link rel="shortcut icon" href="../../assets/logo iub.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <header class="container-fluid">
+    <header class="container-fluid bg-light py-3">
         <div class="row">
             <div class="col-md-6">
                 <a class="navbar-brand" href="https://www.unibarranquilla.edu.co/" target="_blank">
@@ -28,25 +29,27 @@
             </div>
         </div>
     </header>
-
-    <main class="mt-5"> 
-        <h1>Lista de Tareas</h1>
-        <h2>Tareas completadas</h2>
-        <ul id="tareascompletadas"></ul>
-        <h2>Tareas pendientes</h2>
-        <ul id="tareaspendientes"></ul>
+    <main class="container mt-5"> 
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="text-center mb-4">Lista de Tareas</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <h2>Tareas completadas</h2>
+                <ul id="tareascompletadas" class="list-group"></ul>
+            </div>
+            <div class="col-md-6">
+                <h2>Tareas pendientes</h2>
+                <ul id="tareaspendientes" class="list-group"></ul>
+            </div>
+        </div>
     </main>
-    <script src="../../js/Paciente/tareapaciente.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="script.js"></script>
+    <script src="../../js/Paciente/tareapaciente.js"></script>
 </body>
 </html>
