--- a/html/Paciente/cita.html
+++ b/html/Paciente/cita.html
@@ -3,28 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solicitar Cita</title>
+    <title>Agendar Cita</title>
     <link rel="shortcut icon" href="../../assets/logo iub.png" type="image/x-icon">
     <link rel="stylesheet" href="../../css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/citas.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"/>
 </head>
 <body>
     <header>
         <div class="header-img">
-            <a href="https://www.unibarranquilla.edu.co/"> <img src="../../assets/logo-itsa.png" alt="Logo de la IUB"
-                    target="_blank"></a>
+            <a href="https://www.unibarranquilla.edu.co/"> <img src="../../assets/logo-itsa.png" alt="Logo de la IUB" target="_blank"></a>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                        <li><a class="dropdown-item" href="0Paciente.html">Atrás</a></li>
+                            <li><a class="dropdown-item" href="0Paciente.html">Atrás</a></li>
                         </li>
                     </ul>
                 </div>
@@ -51,7 +49,16 @@
                             </div>
                             <div class="cbody">
                                 <div id="contenido1" style="display: none;">
-                                    <p>Contenido del botón Agendar citas.</p>
+                                    <h4>Registros de Citas:</h4><br>
+                                    <div class="mb-3">
+                                        <label for="fecha">Ingrese la fecha:</label>
+                                        <input type="date" id="fecha" class="form-control">
+                                        <button class="btn btn-primary w-100 mt-3" id="buscarCitas">
+                                            <h5>Buscar Citas</h5>
+                                        </button>
+                                    </div>
+                                    <ul id="listaCitas" class="list-group">
+                                    </ul>
                                 </div>
                                 <div id="contenido2" style="display: none;">
                                     <p>Contenido del botón Ver citas.</p>
@@ -63,28 +70,28 @@
             </div>
         </div>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../../js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+    <script src="../../js/Paciente/BuscarCita.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const btnAgendar = document.getElementById("agendar");
             const btnCitas = document.getElementById("citas");
             const contenido1 = document.getElementById("contenido1");
             const contenido2 = document.getElementById("contenido2");
-
             btnAgendar.addEventListener("click", function () {
                 contenido1.style.display = "block";
                 contenido2.style.display = "none";
             });
-
             btnCitas.addEventListener("click", function () {
                 contenido1.style.display = "none";
                 contenido2.style.display = "block";
