--- a/html/Psicologo/0Psicologo.html
+++ b/html/Psicologo/0Psicologo.html
@@ -93,7 +93,7 @@
                         <p class="card-text">Aquí puede encontrar el diagnóstico de su paciente y puede imprimirlo.</p>
                     </div>
                     <div class="card-footer">
-                        <a href="historialClinico.html" class="btn btn-primary w-100">Crear e imprimir diagnóstico</a>
+                        <a href="DatatablePaciente.html" class="btn btn-primary w-100">Crear e imprimir diagnóstico</a>
                     </div>
                 </div>
             </div>
