--- a/html/Psicologo/Publicar.html
+++ b/html/Psicologo/Publicar.html
@@ -56,6 +56,27 @@
                 <button type="submit" class="btn btn-primary mt-3" onclick="publicar(event)">Publicar</button>
             </form>
         </div>
+
+         <!-- Modal de confirmación -->
+    <div class="modal fade" id="confirmacionModal" tabindex="-1" role="dialog" aria-labelledby="confirmacionModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="confirmacionModalLabel">¡Publicación Exitosa!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body text-center">
+                    <img src="https://via.placeholder.com/150" alt="Checkmark Image">
+                    <p>Su evento se ha publicado correctamente.</p>
+                </div>
+                <div class="modal-footer justify-content-center">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
     </main>
     <script src="../../js/Psicologo/Publicar.js"></script>
     <script src="../../js/bootstrap.bundle.min.js"></script>
