--- a/html/Administrador/RegistrarPsico.html
+++ b/html/Administrador/RegistrarPsico.html
@@ -69,6 +69,25 @@
             </div>
         </form>
     </div>
+    <div class="modal fade" id="registroExitosoModal" tabindex="-1" role="dialog" aria-labelledby="registroExitosoModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="registroExitosoModalLabel">Registro Exitoso</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              El psicólogo se ha registrado exitosamente.
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../../js/Administrador/RegistroPsicologoAdmin.js"></script>
     <script src="../../js/bootstrap.bundle.min.js"></script>
