--- a/html/Paciente/FormularioIA.html
+++ b/html/Paciente/FormularioIA.html
@@ -261,7 +261,7 @@
           </div>
           <div style="display: flex; align-self: center;justify-content: center;" class="d-grid"><button style="width: 200px;" type="submit" class="btn btn-success btn-md">Enviar</button></div>        
         </form>
-    <script src="../../js/IA/ia.js"></script>
+    <script src="../../js/Paciente/ia.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
