ia se almacena en bd

--- a/html/Paciente/FormularioIA.html
+++ b/html/Paciente/FormularioIA.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <script src="../../js/Paciente/ValidarInicoPaciente.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario IA</title>
@@ -261,7 +260,7 @@
           </div>
           <div style="display: flex; align-self: center;justify-content: center;" class="d-grid"><button style="width: 200px;" type="submit" class="btn btn-success btn-md">Enviar</button></div>        
         </form>
-    <script src="../../js/Paciente/ia.js"></script>
+    <script src="../../js/Paciente/paciente.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
