--- a/html/Psicologo/0Psicologo.html
+++ b/html/Psicologo/0Psicologo.html
@@ -62,9 +62,8 @@
                 <div class="card h-100">
                     <img src="../../assets/tareas.png" class="card-img-top" alt="solicitar cita" style="height: 200px;">
                     <div class="card-body">
-                        <h5 class="card-title">Asignar tareas y ver estado</h5>
-                        <p class="card-text">Aquí puede encontrar las tareas que ha asignado y en qué estado están por
-                            parte de su paciente.</p>
+                        <h5 class="card-title">Asignar tareas</h5>
+                        <p class="card-text">Aquí puede encontrar las tareas que ha asignado </p>
                     </div>
                     <div class="card-footer">
                         <a href="AsignarTarea.html" class="btn btn-primary w-100">Asignar tareas</a>
@@ -76,7 +75,7 @@
                     <img src="../../assets/a.png" class="card-img-top" alt="..." style="height: 200px;">
                     <div class="card-body">
                         <h5 class="card-title">Publicar consejos y eventos</h5>
-                        <p class="card-text">Puede publicas sus consejos personales a los estudiantes y a su vez
+                        <p class="card-text">Puede publicar sus consejos personales a los estudiantes y a su vez
                             informar de los distintos eventos que hay disponibles acerca de la salud mental y bienestar
                             emocional.</p>
                     </div>
