--- a/html/Administrador/Datatable.html
+++ b/html/Administrador/Datatable.html
@@ -43,7 +43,7 @@
                     <thead>
                         <tr>
                             <th>ID</th>
-                            <th>Nombre del paciente</th>
+                            <th>Nombre</th>
                             <th>Numero de documento</th>
                             <th>Correo institucional</th>
                         </tr>
