--- a/html/Paciente/0Paciente.html
+++ b/html/Paciente/0Paciente.html
@@ -34,9 +34,6 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav nav nav-pills">
                             <li class="nav-item active mx-2">
-                                <button class="btn" id="perfilModalLabel" data-toggle="modal" data-target="#perfilUsuarioModal" onclick="obtenerPerfilUsuario()">Perfil</button>
-                            </li>
-                            <li class="nav-item active mx-2">
                                 <button class="btn" onclick="cerrarsesion()">Cerrar Sesión</button>
                             </li>
                         </ul>
@@ -46,19 +43,7 @@
         </nav>
     </header>  
     <main class="container mt-5">
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
-            <div class="col">
-                <div class="card h-100">
-                    <img src="../../assets/soli.png" class="card-img-top" alt="..." style="height: 200px;">
-                    <div class="card-body">
-                        <h5 class="card-title">Agendar cita</h5>
-                        <p class="card-text">Puede elegir su cita a partir de la disponibilidad de horario.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="AgendarCita.html" class="btn btn-primary w-100">Pedir cita</a>
-                    </div>
-                </div>
-            </div>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 justify-content-center">
             <div class="col">
                 <div class="card h-100">
                     <img src="../../assets/ia.jpeg" class="card-img-top" alt="solicitar cita" style="height: 200px;">
@@ -92,18 +77,6 @@
                     </div>
                     <div class="card-footer">
                         <a href="Tarea.html" class="btn btn-primary w-100">Ir a tareas y compromisos</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="../../assets/historial.png" class="card-img-top" alt="..." style="height: 200px;">
-                    <div class="card-body">
-                        <h5 class="card-title">Historial clínico</h5>
-                        <p class="card-text">Aquí puede subir su historial clínico en formato pdf.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="historialClinico.html" class="btn btn-primary w-100">Subir Historial clínico</a>
                     </div>
                 </div>
             </div>
