--- a/html/Psicologo/0Psicologo.html
+++ b/html/Psicologo/0Psicologo.html
@@ -32,10 +32,6 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav nav nav-pills">
                             <li class="nav-item active mx-2">
-                                <button class="btn" id="perfilModalLabel" data-toggle="modal"
-                                    data-target="#perfilPsicologoModal">Perfil</button>
-                            </li>
-                            <li class="nav-item active mx-2">
                                 <button class="btn" onclick="cerrarsesion()">Cerrar Sesión</button>
                             </li>
                         </ul>
@@ -45,19 +41,7 @@
         </nav>
     </header>
     <main class="container mt-5">
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
-            <div class="col">
-                <div class="card h-100">
-                    <img src="../../assets/cita.png" class="card-img-top" alt="..." style="height: 200px;">
-                    <div class="card-body">
-                        <h5 class="card-title">Agendar y Mostrar Citas</h5>
-                        <p class="card-text">Agendar cita a partir de la disponibilidad de horario y mostrarlas.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="#" class="btn btn-primary w-100">Agendar cita</a>
-                    </div>
-                </div>
-            </div>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 justify-content-center">
             <div class="col">
                 <div class="card h-100">
                     <img src="../../assets/tareas.png" class="card-img-top" alt="solicitar cita" style="height: 200px;">
@@ -88,11 +72,11 @@
                 <div class="card h-100">
                     <img src="../../assets/diagnostic.png" class="card-img-top" alt="..." style="height: 200px;">
                     <div class="card-body">
-                        <h5 class="card-title">Ver e imprimir diagnóstico o historial clínico</h5>
-                        <p class="card-text">Aquí puede encontrar el diagnóstico de su paciente y puede imprimirlo.</p>
+                        <h5 class="card-title">Ver prediagnóstico</h5>
+                        <p class="card-text">Aquí puede encontrar el prediagnóstico de su paciente con base al formulario con machine learning.</p>
                     </div>
                     <div class="card-footer">
-                        <a href="DatatablePaciente.html" class="btn btn-primary w-100">Crear e imprimir diagnóstico</a>
+                        <a href="DatatablePaciente.html" class="btn btn-primary w-100">Ver prediagnóstico</a>
                     </div>
                 </div>
             </div>
