--- a/html/Psicologo/DatatablePaciente.html
+++ b/html/Psicologo/DatatablePaciente.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <script src="../../js/Psicologo/ValidarInicioPsico.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diagnóstico</title>
