--- a/html/Administrador/DashBoard.html
+++ b/html/Administrador/DashBoard.html
@@ -69,7 +69,7 @@
                             Gráfica 3 
                         </div>
                         <div class="card-body">
-                            <canvas id="grafica3" width="400" height="200"></canvas>
+                            <canvas id="grafica_predicciones_ia" width="400" height="200"></canvas>
                         </div>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
                             Gráfica 4 
                         </div>
                         <div class="card-body">
-                            <canvas id="grafica4" width="400" height="200"></canvas>
+                            <canvas id="grafica_tipos_publicaciones" width="400" height="200"></canvas>
                         </div>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                             Gráfica 5  
                         </div>
                         <div class="card-body">
-                            <canvas id="grafica5" width="400" height="200"></canvas>
+                            <canvas id="grafica_tareas_psicologos" width="400" height="200"></canvas>
                         </div>
                     </div>
                 </div>
