cambios de blank

--- a/html/lineas.html
+++ b/html/lineas.html
@@ -210,7 +210,7 @@
                     <div class="col-md-5 cuadro">
                         <div class="row">
                             <div class="col-md-6">
-                                <a href="https://www.instagram.com/hablalo.com.co/ target="_blank">
+                                <a href="https://www.instagram.com/hablalo.com.co/" target="_blank">
                                     <img src="../assets/hablalo-logo.jpg" alt="img de salud mental" class="img">         
                                 </a>
                             </div>
